# euphrates

./: .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: check.yml  pub.yml  site.yml
examples/: fibonacci.euph  hello_world.euph
nix/: unocss-language-server.nix
src/: env.rs  lib.rs  main.rs  state.rs  types.rs  utils.rs
src/env/: mod.rs  state.rs
src/fns/: bind.rs  bool.rs  cmp.rs  core.rs  expr.rs  io.rs  macros.rs  map.rs  mod.rs  num.rs  rng.rs  seq.rs  set.rs  stack.rs  str.rs  try.rs  vec.rs  vecz.rs
src/parser/: base.rs  bind.rs  mod.rs  raw.rs  tests.rs
src/parser/tests/: base.rs  bind.rs  mod.rs
src/types/: base.rs  bind.rs  err.rs  into_iter.rs  iter.rs  mod.rs  num.rs  ord.rs  syn.rs  vec.rs  vecz.rs
src/utils/: iter_ext.rs  mod.rs
web/: .envrc  eslint.config.ts  package.json  pnpm-lock.yaml  svelte.config.ts  tsconfig.json  uno.config.ts  vite.config.ts
web/src/: app.css  app.html
web/src/lib/states/: glue.svelte.ts
web/src/lib/svelte/: glue.svelte.ts
web/src/lib/ts/: polyfills.ts  runner.ts  shim.ts  utils.ts
web/src/routes/: +layout.svelte  +page.svelte
wit/: glue.wit
