[package]
name = "euphrates"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
winnow = "0.7.11"
hipstr = "0.8.0"
derive_more = { version = "2.0.1", features = [
  "debug",
  "display",
  "error",
  "from",
  "into",
  "into_iterator",
  "is_variant",
  "try_from",
  "try_unwrap",
] }
phf = { version = "0.12.1", features = ["macros"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
