[package]
name = "euphrates"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
winnow = "0.7.11"
derive_more = { version = "2.0.1", features = [
  "debug",
  "display",
  "error",
  "from",
  "is_variant",
  "try_from",
  "try_unwrap",
] }
phf = { version = "0.12.1", features = ["macros"] }
num-traits = "0.2.19"
crabtime = { git = "https://github.com/wdanilo/crabtime", version = "1.1.3" }
hipstr = "0.8.0"
anyhow = "1.0.98"
itertools = "0.14.0"
imbl = "6.0.0"
ecow = "0.2.6"
dyn-clone = "1.0.20"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[build-dependencies]
itertools = "0.14.0"

[profile.release]
opt-level = "s"
