[package]
name = "euphrates"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "A functional stack-based programming language"
repository = "https://github.com/molarmanful/euphrates"
readme = "README.md"
keywords = ["language", "stack", "functional", "euphrates"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winnow = "0.7.11"
derive_more = { version = "2.0.1", features = [
  "debug",
  "display",
  "from",
  "is_variant",
  "try_from",
  "try_unwrap",
] }
phf = { version = "0.13.1", features = ["macros"] }
num-traits = "0.2.19"
crabtime = { git = "https://github.com/wdanilo/crabtime", version = "1.1.3" }
hipstr = "0.8.0"
anyhow = "1.0.98"
itertools = "0.14.0"
imbl = "6.0.0"
ecow = "0.2.6"
dyn-clone = "1.0.20"
ordered-float = "5.0.0"
dashu-int = { version = "0.4.1", features = ["num-traits"] }
wit-bindgen = "0.50.0"
clap = { version = "4.5.46", features = ["derive"] }
ordermap = "1.0.0"

[build-dependencies]
itertools = "0.14.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "symbols"
